--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>The select Element</h2>
+<h2 style="color:blue;">Select any car</h2>
 
 <p>The select element defines a drop-down list:</p>
 
