--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2 style="color:blue;">Select any car</h2>
 
-<p>The select element defines a drop-down list:</p>
+<p style="color:cyan;">The select element defines a drop-down list:</p>
 
 <form action="/action_page.php">
   <label for="cars">Choose a car:</label>
